@@ -3,29 +3,35 @@
 
 package io.clientcore.core.http.models;
 
-import io.clientcore.core.util.configuration.Configuration;
-import io.clientcore.core.util.configuration.ConfigurationProperty;
-import io.clientcore.core.util.configuration.ConfigurationPropertyBuilder;
-import io.clientcore.core.util.ClientLogger;
+import io.clientcore.core.annotations.Metadata;
+import io.clientcore.core.annotations.MetadataProperties;
+import io.clientcore.core.instrumentation.logging.ClientLogger;
+import io.clientcore.core.utils.BasicChallengeHandler;
+import io.clientcore.core.utils.ChallengeHandler;
+import io.clientcore.core.utils.DigestChallengeHandler;
+import io.clientcore.core.utils.configuration.Configuration;
+
 import java.io.UnsupportedEncodingException;
 import java.net.InetSocketAddress;
-import java.net.MalformedURLException;
 import java.net.Proxy;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.util.Objects;
 import java.util.regex.Pattern;
 import java.util.regex.PatternSyntaxException;
 
-import static io.clientcore.core.implementation.util.ImplUtils.isNullOrEmpty;
+import static io.clientcore.core.implementation.instrumentation.AttributeKeys.URL_FULL_KEY;
+import static io.clientcore.core.utils.CoreUtils.isNullOrEmpty;
 
 /**
  * This represents proxy configuration to be used in http clients.
  */
-public class ProxyOptions {
+@Metadata(properties = MetadataProperties.FLUENT)
+public final class ProxyOptions {
     private static final ClientLogger LOGGER = new ClientLogger(ProxyOptions.class);
-    private static final String INVALID_PROXY_URL = "URL is invalid and is being ignored.";
+    private static final String INVALID_PROXY_URI = "URI is invalid and is being ignored.";
 
     /*
      * This indicates whether system proxy configurations (HTTPS_PROXY, HTTP_PROXY) are allowed to be used.
@@ -61,31 +67,12 @@ public class ProxyOptions {
     private static final Pattern UNESCAPED_PERIOD = Pattern.compile("(?<!\\\\)\\.");
     private static final Pattern ANY = Pattern.compile("\\*");
 
-    private static final ConfigurationProperty<String> NON_PROXY_PROPERTY = ConfigurationPropertyBuilder.ofString(ConfigurationProperties.HTTP_PROXY_NON_PROXY_HOSTS)
-        .shared(true)
-        .logValue(true)
-        .build();
-    private static final ConfigurationProperty<String> HOST_PROPERTY = ConfigurationPropertyBuilder.ofString(ConfigurationProperties.HTTP_PROXY_HOST)
-        .shared(true)
-        .logValue(true)
-        .build();
-    private static final ConfigurationProperty<Integer> PORT_PROPERTY = ConfigurationPropertyBuilder.ofInteger(ConfigurationProperties.HTTP_PROXY_PORT)
-        .shared(true)
-        .defaultValue(DEFAULT_HTTPS_PORT)
-        .build();
-    private static final ConfigurationProperty<String> USER_PROPERTY = ConfigurationPropertyBuilder.ofString(ConfigurationProperties.HTTP_PROXY_USER)
-        .shared(true)
-        .logValue(true)
-        .build();
-    private static final ConfigurationProperty<String> PASSWORD_PROPERTY = ConfigurationPropertyBuilder.ofString(ConfigurationProperties.HTTP_PROXY_PASSWORD)
-        .shared(true)
-        .build();
-
     private final InetSocketAddress address;
     private final Type type;
     private String username;
     private String password;
     private String nonProxyHosts;
+    private ChallengeHandler challengeHandler;
 
     /**
      * Creates ProxyOptions.
@@ -103,11 +90,14 @@ public class ProxyOptions {
      *
      * @param username proxy user name
      * @param password proxy password
-     * @return the updated ProxyOptions object
+     * @return the updated ProxyOptions object and generates a composite challenge handler with basic and
+     * digest authentication.
      */
     public ProxyOptions setCredentials(String username, String password) {
         this.username = Objects.requireNonNull(username, "'username' cannot be null.");
         this.password = Objects.requireNonNull(password, "'password' cannot be null.");
+        this.challengeHandler = ChallengeHandler.of(new BasicChallengeHandler(username, password),
+            new DigestChallengeHandler(username, password));
         return this;
     }
 
@@ -122,6 +112,17 @@ public class ProxyOptions {
      */
     public ProxyOptions setNonProxyHosts(String nonProxyHosts) {
         this.nonProxyHosts = sanitizeJavaHttpNonProxyHosts(nonProxyHosts);
+        return this;
+    }
+
+    /**
+     * Sets a custom ChallengeHandler.
+     *
+     * @param challengeHandler the custom ChallengeHandler to use.
+     * @return the updated ProxyOptions object.
+     */
+    public ProxyOptions setChallengeHandler(ChallengeHandler challengeHandler) {
+        this.challengeHandler = Objects.requireNonNull(challengeHandler, "'challengeHandler' cannot be null.");
         return this;
     }
 
@@ -183,8 +184,8 @@ public class ProxyOptions {
      *     <li>Java HTTP</li>
      * </ol>
      *
-     * Azure proxy configurations will be preferred over Java proxy configurations as they are more closely scoped to
-     * the purpose of the SDK. Additionally, more secure protocols, HTTPS vs HTTP, will be preferred.
+     * Client Core proxy configurations will be preferred over Java proxy configurations as they are more closely scoped
+     * to the purpose of the SDK. Additionally, more secure protocols, HTTPS vs HTTP, will be preferred.
      *
      * <p>
      * {@code null} will be returned if no proxy was found in the environment.
@@ -207,14 +208,14 @@ public class ProxyOptions {
      * <p>
      * Environment configurations are loaded in this order:
      * <ol>
-     *     <li>Azure HTTPS</li>
-     *     <li>Azure HTTP</li>
+     *     <li>Client Core HTTPS</li>
+     *     <li>Client Core HTTP</li>
      *     <li>Java HTTPS</li>
      *     <li>Java HTTP</li>
      * </ol>
      *
-     * Azure proxy configurations will be preferred over Java proxy configurations as they are more closely scoped to
-     * the purpose of the SDK. Additionally, more secure protocols, HTTPS vs HTTP, will be preferred.
+     * Client Core proxy configurations will be preferred over Java proxy configurations as they are more closely scoped
+     * to the purpose of the SDK. Additionally, more secure protocols, HTTPS vs HTTP, will be preferred.
      * <p>
      * {@code null} will be returned if no proxy was found in the environment.
      *
@@ -225,9 +226,8 @@ public class ProxyOptions {
      * will be returned.
      */
     public static ProxyOptions fromConfiguration(Configuration configuration, boolean createUnresolved) {
-        Configuration proxyConfiguration = (configuration == null)
-            ? Configuration.getGlobalConfiguration()
-            : configuration;
+        Configuration proxyConfiguration
+            = (configuration == null) ? Configuration.getGlobalConfiguration() : configuration;
 
         return attemptToLoadProxy(proxyConfiguration, createUnresolved);
     }
@@ -238,13 +238,13 @@ public class ProxyOptions {
         // System proxy configuration is only possible through system properties.
         // Only use system proxies when the prerequisite property is 'true'.
         if (Boolean.parseBoolean(configuration.get(JAVA_SYSTEM_PROXY_PREREQUISITE))) {
-            proxyOptions = attemptToLoadSystemProxy(configuration, createUnresolved, Configuration.PROPERTY_HTTPS_PROXY);
+            proxyOptions = attemptToLoadSystemProxy(configuration, createUnresolved, Configuration.HTTPS_PROXY);
             if (proxyOptions != null) {
                 LOGGER.atVerbose().log("Using proxy created from HTTPS_PROXY environment variable.");
                 return proxyOptions;
             }
 
-            proxyOptions = attemptToLoadSystemProxy(configuration, createUnresolved, Configuration.PROPERTY_HTTP_PROXY);
+            proxyOptions = attemptToLoadSystemProxy(configuration, createUnresolved, Configuration.HTTP_PROXY);
             if (proxyOptions != null) {
                 LOGGER.atVerbose().log("Using proxy created from HTTP_PROXY environment variable.");
                 return proxyOptions;
@@ -281,36 +281,37 @@ public class ProxyOptions {
         }
 
         try {
-            // TODO (alzimmer): UrlBuilder needs to add support for userinfo
+            // TODO (alzimmer): UriBuilder needs to add support for userinfo
             //  https://www.rfc-editor.org/rfc/rfc3986#section-3.2.1
-            @SuppressWarnings("deprecation")
-            URL proxyUrl = new URL(proxyConfiguration);
-            int port = (proxyUrl.getPort() == -1) ? proxyUrl.getDefaultPort() : proxyUrl.getPort();
+            URI proxyUri = new URI(proxyConfiguration);
+            int port;
+            if (proxyUri.getPort() == -1) {
+                port = "https".equals(proxyUri.getScheme()) ? 443 : 80;
+            } else {
+                port = proxyUri.getPort();
+            }
 
             InetSocketAddress socketAddress = (createUnresolved)
-                ? InetSocketAddress.createUnresolved(proxyUrl.getHost(), port)
-                : new InetSocketAddress(proxyUrl.getHost(), port);
+                ? InetSocketAddress.createUnresolved(proxyUri.getHost(), port)
+                : new InetSocketAddress(proxyUri.getHost(), port);
 
             ProxyOptions proxyOptions = new ProxyOptions(Type.HTTP, socketAddress);
 
-            String nonProxyHostsString = configuration.get(Configuration.PROPERTY_NO_PROXY);
+            String nonProxyHostsString = configuration.get(Configuration.NO_PROXY);
             if (!isNullOrEmpty(nonProxyHostsString)) {
                 proxyOptions.nonProxyHosts = sanitizeNoProxy(nonProxyHostsString);
 
-                LOGGER.atVerbose()
-                    .addKeyValue("regex", proxyOptions.nonProxyHosts)
-                    .log("Using non-proxy hosts");
+                LOGGER.atVerbose().addKeyValue("regex", proxyOptions.nonProxyHosts).log("Using non-proxy hosts");
             }
 
-            String userInfo = proxyUrl.getUserInfo();
+            String userInfo = proxyUri.getUserInfo();
             if (userInfo != null) {
                 String[] usernamePassword = userInfo.split(":", 2);
                 if (usernamePassword.length == 2) {
                     try {
                         proxyOptions.setCredentials(
                             URLDecoder.decode(usernamePassword[0], StandardCharsets.UTF_8.toString()),
-                            URLDecoder.decode(usernamePassword[1], StandardCharsets.UTF_8.toString())
-                        );
+                            URLDecoder.decode(usernamePassword[1], StandardCharsets.UTF_8.toString()));
                     } catch (UnsupportedEncodingException e) {
                         return null;
                     }
@@ -318,10 +319,8 @@ public class ProxyOptions {
             }
 
             return proxyOptions;
-        } catch (MalformedURLException ex) {
-            LOGGER.atWarning()
-                .addKeyValue("url", proxyProperty)
-                .log(INVALID_PROXY_URL, ex);
+        } catch (URISyntaxException ex) {
+            LOGGER.atWarning().addKeyValue(URL_FULL_KEY, proxyProperty).setThrowable(ex).log(INVALID_PROXY_URI);
             return null;
         }
     }
@@ -334,7 +333,7 @@ public class ProxyOptions {
     }
 
     private static ProxyOptions attemptToLoadJavaProxy(Configuration configuration, boolean createUnresolved,
-                                                       String type) {
+        String type) {
         String host = configuration.get(type + "." + JAVA_PROXY_HOST);
 
         // No proxy configuration setup.
@@ -357,34 +356,33 @@ public class ProxyOptions {
     }
 
     private static ProxyOptions attemptToLoadSdkProxy(Configuration configuration, boolean createUnresolved) {
-        String host = configuration.get(HOST_PROPERTY);
+        String host = configuration.get(ConfigurationProperties.HTTP_PROXY_HOST);
 
         // No proxy configuration setup.
         if (isNullOrEmpty(host)) {
             return null;
         }
 
-        int port = configuration.get(PORT_PROPERTY);
-        String nonProxyHostsString = configuration.get(NON_PROXY_PROPERTY);
-        String username = configuration.get(USER_PROPERTY);
-        String password = configuration.get(PASSWORD_PROPERTY);
+        String portConfig = configuration.get(ConfigurationProperties.HTTP_PROXY_PORT);
+        int port = (portConfig == null) ? DEFAULT_HTTPS_PORT : Integer.parseInt(portConfig);
+        String nonProxyHostsString = configuration.get(ConfigurationProperties.HTTP_PROXY_NON_PROXY_HOSTS);
+        String username = configuration.get(ConfigurationProperties.HTTP_PROXY_USER);
+        String password = configuration.get(ConfigurationProperties.HTTP_PROXY_PASSWORD);
 
         return createOptions(host, port, nonProxyHostsString, username, password, createUnresolved);
     }
 
-    private static ProxyOptions createOptions(String host, int port, String nonProxyHostsString, String username, String password, boolean createUnresolved) {
-        InetSocketAddress socketAddress = (createUnresolved)
-            ? InetSocketAddress.createUnresolved(host, port)
-            : new InetSocketAddress(host, port);
+    private static ProxyOptions createOptions(String host, int port, String nonProxyHostsString, String username,
+        String password, boolean createUnresolved) {
+        InetSocketAddress socketAddress
+            = (createUnresolved) ? InetSocketAddress.createUnresolved(host, port) : new InetSocketAddress(host, port);
 
         ProxyOptions proxyOptions = new ProxyOptions(Type.HTTP, socketAddress);
 
         if (!isNullOrEmpty(nonProxyHostsString)) {
             proxyOptions.nonProxyHosts = sanitizeJavaHttpNonProxyHosts(nonProxyHostsString);
 
-            LOGGER.atVerbose()
-                .addKeyValue("regex", proxyOptions.nonProxyHosts)
-                .log("Using non-proxy host regex");
+            LOGGER.atVerbose().addKeyValue("regex", proxyOptions.nonProxyHosts).log("Using non-proxy host regex");
         }
 
         if (username != null && password != null) {
@@ -393,6 +391,7 @@ public class ProxyOptions {
 
         return proxyOptions;
     }
+
     /*
      * Helper function that sanitizes 'http.nonProxyHosts' into a Pattern safe string.
      */
@@ -471,7 +470,7 @@ public class ProxyOptions {
                 /*
                  * Replace the non-proxy host with the sanitized value.
                  *
-                 * The body of the non-proxy host is quoted to handle scenarios such a '127.0.0.1' or '*.azure.com'
+                 * The body of the non-proxy host is quoted to handle scenarios such a '127.0.0.1' or '*.somecloud.com'
                  * where without quoting the '.' in the string would be treated as the match any character instead of
                  * the literal '.' character.
                  */
@@ -486,6 +485,15 @@ public class ProxyOptions {
         }
 
         return sanitizedBuilder.toString();
+    }
+
+    /**
+     * Gets the `ChallengeHandler` instance associated with the proxy options.
+     *
+     * @return The `ChallengeHandler` instance.
+     */
+    public ChallengeHandler getChallengeHandler() {
+        return this.challengeHandler;
     }
 
     /**
