@@ -4,31 +4,29 @@
 package io.clientcore.http.stress;
 
 import com.azure.perf.test.core.PerfStressOptions;
-import io.clientcore.core.http.client.DefaultHttpClientBuilder;
+import io.clientcore.core.http.client.JdkHttpClientBuilder;
 import io.clientcore.core.http.models.HttpHeaderName;
-import io.clientcore.core.http.models.HttpLogOptions;
+import io.clientcore.core.http.pipeline.HttpInstrumentationOptions;
 import io.clientcore.core.http.models.HttpMethod;
 import io.clientcore.core.http.models.HttpRequest;
-import io.clientcore.core.http.models.HttpResponse;
 import io.clientcore.core.http.models.Response;
-import io.clientcore.core.http.pipeline.HttpLoggingPolicy;
+import io.clientcore.core.http.pipeline.HttpInstrumentationPolicy;
 import io.clientcore.core.http.pipeline.HttpPipeline;
 import io.clientcore.core.http.pipeline.HttpPipelineBuilder;
 import io.clientcore.core.http.pipeline.HttpRetryPolicy;
-import io.clientcore.core.util.ClientLogger;
-import io.clientcore.http.jdk.httpclient.JdkHttpClientProvider;
+import io.clientcore.core.instrumentation.logging.ClientLogger;
+import io.clientcore.core.models.binarydata.BinaryData;
 import io.clientcore.http.okhttp3.OkHttpHttpClientProvider;
 import io.clientcore.http.stress.util.TelemetryHelper;
-import java.io.IOException;
-import java.io.UncheckedIOException;
-import java.net.MalformedURLException;
-import java.net.URL;
+import reactor.core.publisher.Mono;
+
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.time.Instant;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.atomic.AtomicLong;
-import reactor.core.publisher.Mono;
 
 /**
  * Performance test for simple HTTP GET against test server.
@@ -38,23 +36,24 @@ public class HttpGet extends ScenarioBase<StressOptions> {
     private static final TelemetryHelper TELEMETRY_HELPER = new TelemetryHelper(HttpGet.class);
     private static final ClientLogger LOGGER = new ClientLogger(HttpGet.class);
     private final HttpPipeline pipeline;
-    private final URL url;
-    final ExecutorService executorService = Executors.newFixedThreadPool(options.getConcurrentTaskLimit());
+    private final URI uri;
+    final ExecutorService executorService = Executors.newFixedThreadPool(options.getParallel());
 
     // This is almost-unique-id generator. We could use UUID, but it's a bit more expensive to use.
     private final AtomicLong clientRequestId = new AtomicLong(Instant.now().getEpochSecond());
 
     /**
      * Creates an instance of performance test.
+     *
      * @param options stress test options
      */
     public HttpGet(StressOptions options) {
         super(options, TELEMETRY_HELPER);
         pipeline = getPipelineBuilder().build();
         try {
-            url = new URL(options.getServiceEndpoint());
-        } catch (MalformedURLException ex) {
-            throw LOGGER.logThrowableAsError(new IllegalArgumentException("'url' must be a valid URL.", ex));
+            uri = new URI(options.getServiceEndpoint());
+        } catch (URISyntaxException ex) {
+            throw LOGGER.throwableAtError().log("'uri' must be a valid URI.", ex, IllegalArgumentException::new);
         }
     }
 
@@ -66,11 +65,8 @@ public class HttpGet extends ScenarioBase<StressOptions> {
     private void runInternal() {
         // no need to handle exceptions here, they will be handled (and recorded) by the telemetry helper
         HttpRequest request = createRequest();
-        try (Response<?> response = pipeline.send(request)) {
-            response.getBody().toBytes();
-        } catch (IOException e) {
-            LOGGER.logThrowableAsError(new UncheckedIOException(e));
-        }
+        Response<BinaryData> response = pipeline.send(request);
+        response.getValue().toBytes();
     }
 
     @Override
@@ -94,28 +90,17 @@ public class HttpGet extends ScenarioBase<StressOptions> {
     }
 
     private Mono<Void> runInternalAsync() {
-        return Mono.usingWhen(Mono.fromCallable(() -> pipeline.send(createRequest())),
-            response -> {
-                ((HttpResponse<?>) response).getBody().toBytes();
-                return Mono.empty();
-            },
-            response -> Mono.fromRunnable(() -> {
-                try {
-                    response.close();
-                } catch (IOException e) {
-                    LOGGER.logThrowableAsError(new UncheckedIOException(e));
-                }
-            }));
+        return Mono.usingWhen(Mono.fromCallable(() -> pipeline.send(createRequest())), response -> {
+            response.getValue().toBytes();
+            return Mono.empty();
+        }, response -> Mono.fromRunnable(response::close));
     }
 
     // Method to run using CompletableFuture
     private CompletableFuture<Void> runAsyncWithCompletableFutureInternal() {
         return CompletableFuture.supplyAsync(() -> {
-            try {
-                Response<?> response = pipeline.send(createRequest());
-                response.getBody().toBytes();
-            } catch (Exception e) {
-                LOGGER.logThrowableAsError(e);
+            try (Response<BinaryData> response = pipeline.send(createRequest())) {
+                response.getValue().toBytes();
             }
             return null;
         }, executorService);
@@ -123,50 +108,39 @@ public class HttpGet extends ScenarioBase<StressOptions> {
 
     // Method to run using ExecutorService
     private Runnable runAsyncWithExecutorServiceInternal() {
-        Runnable task = () -> {
-            try {
-                Response<?> response = pipeline.send(createRequest());
-                response.getBody().toBytes();
-            } catch (Exception e) {
-                LOGGER.logThrowableAsError(e);
+        return () -> {
+            try (Response<BinaryData> response = pipeline.send(createRequest())) {
+                response.getValue().toBytes();
             }
         };
-        return task;
     }
 
     // Method to run using Virtual Threads
     private Runnable runAsyncWithVirtualThreadInternal() {
-        Runnable task = () -> {
-            try {
-                Response<?> response = pipeline.send(createRequest());
-                response.getBody().toBytes();
-            } catch (Exception e) {
-                LOGGER.logThrowableAsError(e);
+        return () -> {
+            try (Response<BinaryData> response = pipeline.send(createRequest())) {
+                response.getValue().toBytes();
             }
         };
-        return task;
     }
 
     private HttpRequest createRequest() {
-        HttpRequest request = new HttpRequest(HttpMethod.GET, url);
-        request.getHeaders().set(HttpHeaderName.USER_AGENT, "azsdk-java-clientcore-stress");
-        request.getHeaders().set(HttpHeaderName.fromString("x-client-id"), String.valueOf(clientRequestId.incrementAndGet()));
+        HttpRequest request = new HttpRequest().setMethod(HttpMethod.GET).setUri(uri);
+        request.getHeaders().set(HttpHeaderName.USER_AGENT, "clientcore-stress");
+        request.getHeaders()
+            .set(HttpHeaderName.fromString("x-client-id"), String.valueOf(clientRequestId.incrementAndGet()));
         return request;
     }
 
     private HttpPipelineBuilder getPipelineBuilder() {
-        HttpLogOptions logOptions = new HttpLogOptions()
-            .setLogLevel(HttpLogOptions.HttpLogDetailLevel.HEADERS);
-
-        HttpPipelineBuilder builder = new HttpPipelineBuilder()
-            .policies(new HttpRetryPolicy(), new HttpLoggingPolicy(logOptions));
+        HttpPipelineBuilder builder = new HttpPipelineBuilder().addPolicy(new HttpRetryPolicy())
+            .addPolicy(new HttpInstrumentationPolicy(
+                new HttpInstrumentationOptions().setHttpLogLevel(HttpInstrumentationOptions.HttpLogLevel.HEADERS)));
 
         if (options.getHttpClient() == PerfStressOptions.HttpClientType.OKHTTP) {
             builder.httpClient(new OkHttpHttpClientProvider().getSharedInstance());
-        } else if (options.getHttpClient() == PerfStressOptions.HttpClientType.JDK) {
-            builder.httpClient(new JdkHttpClientProvider().getSharedInstance());
         } else {
-            builder.httpClient(new DefaultHttpClientBuilder().build());
+            builder.httpClient(new JdkHttpClientBuilder().build());
         }
         return builder;
     }
